--- a/experimental/higepon/scheme/src/Makefile.am
+++ b/experimental/higepon/scheme/src/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = scheme
 #scheme_INCLUDES=-I /usr/include -I /usr/include/stlport -I .
-scheme_CXXFLAGS = -pg -I /usr/local/include/gc -fno-exceptions -fno-rtti -O0 -gstabs+ -Wall -DGC_OPERATOR_NEW_ARRAY -DUSE_BOEHM_GC
+scheme_CXXFLAGS = -pg -I /usr/local/include/gc -fno-exceptions -fno-rtti -O0 -gstabs+ -Wall -DGC_OPERATOR_NEW_ARRAY# -DUSE_BOEHM_GC
 scheme_LDFLAGS = -pg -lgc
 scheme_SOURCES = \
 main.cpp\
@@ -8,6 +8,8 @@ Filter.h\
 Assert.h\
 Object.cpp\
 Object.h\
+Eval.cpp\
+Eval.h\
 Number.cpp\
 Number.h\
 String.cpp\
@@ -79,6 +81,8 @@ PrimitiveProcedures/StringToNumber.cpp\
 PrimitiveProcedures/StringToNumber.h\
 PrimitiveProcedures/StringAppend.cpp\
 PrimitiveProcedures/StringAppend.h\
+PrimitiveProcedures/Load.h\
+PrimitiveProcedures/Load.cpp\
 scheme.h\
 scheme.cpp\
 Macro.h\
